<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:enabled="true"
        android:title="@string/main_nav_search"
        android:icon="@drawable/ic_search_black_24dp"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_lines"
        android:enabled="true"
        android:icon="@drawable/lines"
        android:title="@string/main_nav_lines"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_stops"
        android:enabled="true"
        android:icon="@drawable/bust_stop"
        android:title="@string/main_nav_stops"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_favs"
        android:enabled="true"
        android:icon="@drawable/ic_favorite_24dp"
        android:title="@string/main_nav_favs"
        app:showAsAction="ifRoom" />
</menu>