<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pbmchc.emzetka.fragments.MainFindLinesFragment"
    android:orientation="vertical"
    android:id="@+id/findLinesLayout">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:src="@drawable/top_graphic"
        android:id="@+id/startImage"/>
    <TextView
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:paddingTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/find_lines_destination_label"
        android:textSize="16sp"
        android:textStyle="bold"/>
    <android.support.v7.widget.AppCompatAutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/destinationStopAtc"
        android:lines="1"
        android:inputType="text"
        android:maxLines="1"
        android:textSize="16sp"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginTop="5dp"
        android:hint="@string/find_lines_destination_placeholder"
        android:drawableStart="@drawable/search_small_textview"
        android:drawableLeft="@drawable/search_small_textview"
        android:drawablePadding="3dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_nav_search"
        android:background="@drawable/button_corners"
        android:id="@+id/buttonSearch"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="12dp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        style="?android:attr/borderlessButtonStyle"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/resultContainer"
        android:visibility="gone"/>
</LinearLayout>
