<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/schedule_rect"
    android:id="@+id/departureLinear"
    android:gravity="center_vertical">
    <LinearLayout
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:background="@drawable/upcoming_rect"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:id="@+id/timeContainer"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/labelHours"
            android:text="@string/single_stop_upcoming_departure_label"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:layout_gravity="start"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/hours"
                android:text="@string/placeholder"
                android:layout_gravity="bottom"
                android:textColor="@android:color/white"
                android:textSize="28sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minutes_abbr"
                android:id="@+id/labelMinutes"
                android:paddingStart="2dp"
                android:paddingLeft="2dp"
                android:paddingEnd="1dp"
                android:paddingRight="1dp"
                android:layout_gravity="bottom"
                android:textColor="@android:color/white"
                android:textSize="12sp"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lineName"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:padding="5dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/line_rect"/>
        <ImageView
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/arrow"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/direction"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:textSize="13sp"
            android:textStyle="bold"
            android:layout_gravity="center_vertical" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/preciseTime"
            android:textSize="13sp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:gravity="end"
            android:layout_gravity="center_vertical|end" />
    </LinearLayout>
</LinearLayout>