<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.pbmchc.emzetka.activities.ScheduleActivity">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:id="@+id/scheduleAppBar"
        app:elevation="0dp">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:background="@drawable/support_toolbar_rect"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_activity_single_line"
                android:textSize="12sp"
                android:textColor="@android:color/darker_gray"
                android:layout_gravity="center_vertical"/>
            <TextView
                android:layout_width="wrap_content"
                android:text="test"
                android:background="@drawable/line_rect"
                android:padding="5dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:id="@+id/lineName"
                android:textColor="@color/textColorDark"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:src="@drawable/emzetka_list_stop_small"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center_vertical"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/placeholder"
                    android:layout_height="wrap_content"
                    android:id="@+id/stopName"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:textStyle="bold"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp">
                    <ImageView
                        android:layout_width="12dp"
                        android:layout_height="12dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/arrow"
                        android:layout_marginStart="12dp"
                        android:layout_marginLeft="12dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/stopDirection"
                        android:text="@string/placeholder"
                        android:textSize="12sp"
                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"
                        android:textColor="@color/textColorDark"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <android.support.design.widget.TabLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabMode="fixed"
            app:tabGravity="fill"
            android:id="@+id/scheduleTabs"
            android:clickable="true"/>
    </android.support.design.widget.AppBarLayout>
    <include layout="@layout/content_schedule_plan"
        android:layout_below="@id/scheduleAppBar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="164dp"/>
    <include layout="@layout/progress_bar_layout" />
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabFav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_favorite_border_24dp" />
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabMargin"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_gravity="top|end"
        android:layout_margin="@dimen/fab_margin"
        app:layout_anchorGravity="top"
        app:layout_anchor="@id/fabFav"
        android:visibility="invisible"
        app:borderWidth="0dp"/>
    <android.support.v4.widget.NestedScrollView
        android:id="@+id/bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="true"
        android:elevation="10dp"
        android:background="@drawable/support_toolbar_rect"
        app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/schedule_full_legend"
                android:textAllCaps="true"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:background="@drawable/legend_rect"
                android:gravity="center_vertical"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/legendsTxt"
                android:padding="16dp"
                android:textSize="15sp"/>
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>
    <android.support.v4.widget.NestedScrollView
        android:id="@+id/bottom_sheet_lines"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        android:clipToPadding="true"
        android:background="@drawable/support_toolbar_rect"
        app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/schedule_next_stops"
                android:textAllCaps="true"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:background="@drawable/legend_rect"
                android:gravity="center_vertical"/>
           <android.support.v7.widget.RecyclerView
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:id="@+id/restLineRv">
           </android.support.v7.widget.RecyclerView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ellipsis"
                android:layout_marginTop="10dp"
                android:textSize="12sp"
                android:layout_gravity="center_horizontal"
                android:id="@+id/restOfLineIndicator"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="28dp"
                android:id="@+id/showFullLineBtn"
                android:text="@string/schedule_show_full_line_label"
                android:textColor="@color/colorAccent"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_gravity="center"/>
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
